Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33386

Wrong error message on `GRANT .. ON PACKAGE no_such_package ..`

    XMLWordPrintable

Details

    Description

      GRANT EXECUTE ON PACKAGE no_such_package TO PUBLIC;
      

      ERROR 1305 (42000): FUNCTION or PROCEDURE no_such_package does not exist
      

      The error message is wrong, the statement tried to grant on a nonexistent package not a nonexistent function or procedure.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.